<resources>
    <string name="app_name">SimpControl</string>
    <string name="trackpad_mode_text">Trackpad mode</string>
    <string name="gyro_mode_text">Gyro mode</string>
    <string name="menu_unicode">☰ </string>
    <string name="placeholder">[placeholder]</string>
    <string name="mode_trackpad">mode: Trackpad</string>
    <string name="mode_advance_trackpad">mode: Advance Trackpad</string>
    <string name="mode_gyro">mode: Gyro</string>
    <string name="mode_advance_gyro">mode: Advance Gyro</string>
    <string name="not_implemented_yet">not implemented yet!</string>
    <string name="advance_trackpad_mode">Advance Trackpad mode</string>
    <string name="advance_gyro_mode">Advance Gyro mode</string>
    <string name="ready">Ready!</string>
    <string name="apply_text">Apply</string>
    <string name="send_test_text">Send Test</string>
    <string name="server_port">Server Port:</string>
    <string name="_8008">8008</string>
    <string name="error_invalid_ip">ERROR! invalid ip!</string>
    <string name="error_invalid_port">ERROR! invalid port!</string>
    <string name="success_changes_were_saved">SUCCESS! changes were saved!</string>
    <string name="error_host_unreachable">ERROR: host unreachable!</string>
    <string name="success_host_is_reachable">SUCCESS! host is reachable!, check server terminal to see if the test packet was successfuly received!</string>
    <string name="_50">50</string>
    <string name="sensitivity">Sensitivity:</string>
    <string name="_192_168_0_1">192.168.0.1</string>
    <string name="error_invalid_sensitivity">ERROR! invalid sensitivity!</string>
    <string name="failed_to_connect">Failed to connect, offline mode!</string>
    <string name="tries">tries: %1$s</string>
</resources>