<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21273A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/custom_top_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/settingsButton"
            android:layout_width="28dp"
            android:textAlignment="textStart"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/menu_unicode"
            android:textColor="#B5B5B5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#B5B5B5" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/trackpad_mode_selection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/settings_rounded"
            android:textSize="20sp"
            android:gravity="center"

            android:elevation="5dp"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"

            android:text="@string/trackpad_mode_text"
            android:textColor="#B5B5B5" />

        <TextView
            android:id="@+id/gyro_mode_selection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/settings_rounded"
            android:textSize="20sp"
            android:gravity="center"

            android:elevation="5dp"

            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"

            android:text="@string/gyro_mode_text"
            android:textColor="#B5B5B5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/advance_trackpad_mode_selection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/settings_rounded"
            android:textSize="20sp"
            android:gravity="center"

            android:elevation="5dp"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"

            android:text="@string/advance_trackpad_mode"
            android:textColor="#B5B5B5" />

        <TextView
            android:id="@+id/advance_gyro_mode_selection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/settings_rounded"
            android:textSize="20sp"
            android:gravity="center"

            android:elevation="5dp"

            android:layout_marginStart="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:text="@string/advance_gyro_mode"
            android:textColor="#B5B5B5" />

    </LinearLayout>


</LinearLayout>