<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#21273A"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/custom_top_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#B5B5B5"
            android:drawableStart="@drawable/custom_backbutton_thinner" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#B5B5B5" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_rounded"
            android:orientation="vertical"

            android:elevation="5dp"

            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:gravity="start"
                android:text="Server IP:"
                android:textColor="#B5B5B5"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/ServerIP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#B5B5B5"
                android:ems="10"
                android:inputType="text"
                android:text="192.168.0.1"
                android:textColor="#B5B5B5" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_rounded"
            android:orientation="vertical"

            android:elevation="5dp"

            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:layout_marginStart="3dp"
                android:text="@string/server_port"
                android:textSize="19sp"
                android:textColor="#B5B5B5" />

            <EditText
                android:id="@+id/ServerPort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#B5B5B5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/_8008"
                android:textColor="#B5B5B5" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:elevation="1dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status:"
                android:layout_marginBottom="5dp"
                android:textColor="#B5B5B5"
                />

            <TextView
                android:id="@+id/config_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#B5B5B5"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:layout_gravity="bottom"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/apply_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginVertical="4dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:elevation="100dp"

                android:backgroundTint="#292F47"
                android:gravity="center"
                android:text="@string/apply_text"
                android:textColor="#B5B5B5"
                android:textSize="19sp" />

            <Button
                android:id="@+id/send_test"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"

                android:backgroundTint="#292F47"

                android:textSize="20sp"
                android:elevation="10dp"
                android:gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginVertical="4dp"
                android:text="@string/send_test_text"
                android:textColor="#B5B5B5" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>